--- a/css/index.css
+++ b/css/index.css
@@ -771,3 +771,16 @@ body {
     color: #42b983;
   }
 }
+.gitter-open-chat-button {
+  background-color: #4fc08d;
+  text-transform: none;
+  -webkit-transition: opacity 1s ease;
+  -moz-transition: opacity 1s ease;
+  -ms-transition: opacity 1s ease;
+  -o-transition: opacity 1s ease;
+  transition: opacity 1s ease;
+  opacity: 0;
+}
+.gitter-open-chat-button.is-displayed {
+  opacity: 1;
+}
