Update Chat style
Signed-off-by: Bruno Lesieur <bruno.lesieur@gmail.com>

--- a/css/index.css
+++ b/css/index.css
@@ -783,6 +783,7 @@ body {
   -o-transition: opacity 1s ease;
   transition: opacity 1s ease;
   opacity: 0;
+  padding: 6px 12px;
 }
 .gitter-open-chat-button.is-displayed {
   opacity: 1;
