--- a/css/page.css
+++ b/css/page.css
@@ -965,6 +965,7 @@ ul.demo li {
   -o-transition: opacity 1s ease;
   transition: opacity 1s ease;
   opacity: 0;
+  padding: 6px 12px;
 }
 .gitter-open-chat-button.is-displayed {
   opacity: 1;
