--- a/css/page.css
+++ b/css/page.css
@@ -268,7 +268,7 @@ a.button.white {
   display: none;
   box-sizing: border-box;
   max-height: calc(100vh - 61px);
-  overflow-y: scroll;
+  overflow-y: auto;
   position: absolute;
   top: 100%;
   right: -15px;
@@ -593,7 +593,7 @@ ul.demo li {
   padding-left: 1em;
 }
 .sidebar li {
-  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .sidebar .version-select {
   vertical-align: middle;
@@ -721,6 +721,107 @@ ul.demo li {
 .content.menu li {
   list-style-type: none;
   margin-top: 0.1em;
+}
+#team-members .vuer {
+  display: flex;
+  padding: 25px 0;
+  border-bottom: 1px dotted #ddd;
+}
+#team-members .vuer:first-of-type {
+  margin-top: 15px;
+}
+#team-members .vuer:last-of-type {
+  border-bottom: none;
+}
+#team-members .vuer .avatar {
+  flex: 0 0 80px;
+}
+#team-members .vuer .avatar img {
+  border-radius: 50%;
+}
+#team-members .vuer .profile {
+  padding-left: 26px;
+  flex: 1;
+}
+#team-members .vuer .profile h3 {
+  margin: 0;
+  font-size: 1.3em;
+}
+#team-members .vuer .profile h3::before,
+#team-members .vuer .profile h3::after {
+  display: none;
+}
+#team-members .vuer .profile h3 > sup {
+  text-transform: uppercase;
+  font-size: 0.7em;
+  letter-spacing: 0.3px;
+  padding: 2px 5px;
+  margin-left: 10px;
+  color: rgba(0,0,0,0.6);
+  background: #f9f7f5;
+  border-radius: 5px;
+}
+#team-members .vuer .profile dl {
+  margin: 0.6em 0 0;
+}
+#team-members .vuer .profile dt,
+#team-members .vuer .profile dd,
+#team-members .vuer .profile ul,
+#team-members .vuer .profile li {
+  display: inline;
+  padding: 0;
+  margin: 0;
+  line-height: 1.3;
+}
+#team-members .vuer .profile dt {
+  text-transform: uppercase;
+  font-size: 0.84em;
+  font-weight: 600;
+}
+#team-members .vuer .profile dt::after {
+  content: '';
+  margin-right: 7px;
+}
+#team-members .vuer .profile dd {
+  font-weight: 600;
+}
+#team-members .vuer .profile dd::after {
+  display: block;
+  content: ' ';
+  margin-top: 0.6em;
+}
+#team-members .vuer .profile li {
+  display: inline-block;
+}
+#team-members .vuer .profile li::after {
+  display: inline-block;
+  content: '·';
+  margin: 0 8px;
+}
+#team-members .vuer .profile li:last-child::after {
+  content: '';
+}
+#team-members .vuer .profile .social a {
+  display: inline-block;
+  line-height: 1;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+#team-members .vuer .profile .social a.github {
+  color: #000;
+}
+#team-members .vuer .profile .social a.twitter {
+  color: #1da1f3;
+}
+#team-members .vuer .profile .social i {
+  vertical-align: text-bottom;
+  font-size: 1.3em;
+}
+@media (max-width: 640px) {
+  #team-members .vuer .profile h3 sup {
+    display: inline-block;
+    margin-left: 0;
+  }
 }
 #header {
   box-shadow: 0 0 1px rgba(0,0,0,0.25);
