--- a/css/page.css
+++ b/css/page.css
@@ -575,9 +575,6 @@ ul.demo li {
   top: 61px;
   left: 0;
   bottom: 0;
-  padding: 40px 0 30px 60px;
-  width: 260px;
-  margin-right: 20px;
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -594,6 +591,10 @@ ul.demo li {
 }
 .sidebar li {
   margin-top: 0.5em;
+}
+.sidebar .sidebar-inner {
+  width: 260px;
+  padding: 40px 20px 60px 60px;
 }
 .sidebar .version-select {
   vertical-align: middle;
@@ -673,17 +674,22 @@ ul.demo li {
 @media screen and (max-width: 900px) {
   .sidebar {
     position: fixed;
-    z-index: 8;
+    z-index: 10;
     background-color: #f9f9f9;
     height: 100%;
     top: 0;
     left: 0;
-    padding: 60px 30px 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    box-sizing: border-box;
     transition: all 0.4s cubic-bezier(0.4, 0, 0, 1);
     -webkit-transform: translate(-280px, 0);
     transform: translate(-280px, 0);
+  }
+  .sidebar .sidebar-inner {
+    padding: 50px 10px 10px 20px;
+    box-sizing: border-box;
+  }
+  .sidebar .sidebar-inner-index {
+    padding: 10px 10px 10px 20px;
   }
   .sidebar .search-query {
     width: 200px;
@@ -721,6 +727,32 @@ ul.demo li {
 .content.menu li {
   list-style-type: none;
   margin-top: 0.1em;
+}
+#team-members .sort-by-distance-button {
+  display: inline-block;
+  padding: 0.4em 0.7em 0.45em;
+  font-weight: bold;
+  font-size: 0.5em;
+  text-transform: uppercase;
+  line-height: 1;
+  border: none;
+  background: #34495e;
+  color: #fff;
+  border-radius: 3px;
+  position: relative;
+  cursor: pointer;
+  float: right;
+  margin-top: 0.3em;
+}
+#team-members .sort-by-distance-button i {
+  margin-right: 0.25em;
+}
+#team-members .sort-by-distance-button i:last-child {
+  margin-right: 0;
+}
+#team-members .sort-by-distance-button[disabled] {
+  opacity: 0.7;
+  cursor: default;
 }
 #team-members .vuer {
   display: flex;
@@ -761,6 +793,19 @@ ul.demo li {
   background: #f9f7f5;
   border-radius: 5px;
 }
+#team-members .vuer .profile .user-match {
+  cursor: help;
+  color: #4682b4;
+}
+#team-members .vuer .profile .user-match:after {
+  content: '\f06a';
+  font-family: FontAwesome;
+  font-size: 0.75em;
+  vertical-align: super;
+  margin-left: 4px;
+  margin-right: 2px;
+  position: relative;
+}
 #team-members .vuer .profile dl {
   margin: 0.6em 0 0;
 }
@@ -781,6 +826,19 @@ ul.demo li {
 #team-members .vuer .profile dt::after {
   content: '';
   margin-right: 7px;
+}
+#team-members .vuer .profile dt i {
+  width: 14px;
+  text-align: center;
+}
+#team-members .vuer .profile dt i.fa-map-marker {
+  font-size: 1.15em;
+}
+#team-members .vuer .profile dt i.fa-globe {
+  font-size: 1.2em;
+}
+#team-members .vuer .profile dt i.fa-link {
+  font-size: 1.05em;
 }
 #team-members .vuer .profile dd {
   font-weight: 600;
@@ -823,6 +881,45 @@ ul.demo li {
     margin-left: 0;
   }
 }
+.rotating-clockwise {
+  animation: 3s rotating-clockwise linear infinite;
+}
+i.rotating-clockwise {
+  display: inline-block;
+  animation-duration: 2s;
+}
+@-moz-keyframes rotating-clockwise {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes rotating-clockwise {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes rotating-clockwise {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotating-clockwise {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 #header {
   box-shadow: 0 0 1px rgba(0,0,0,0.25);
   transition: background-color 0.3s ease-in-out;
@@ -832,6 +929,7 @@ ul.demo li {
   padding: 2.2em 0;
   max-width: 600px;
   margin: 0 auto;
+  padding-left: 20px;
 }
 .content.api > a:first-of-type > h2 {
   margin-top: 0;
@@ -962,22 +1060,23 @@ ul.demo li {
 .content > table tr:nth-child(2n) code {
   background-color: #efefef;
 }
-.content p.tip {
+.content p.tip,
+.content p.success {
   padding: 12px 24px 12px 30px;
   margin: 2em 0;
-  border-left: 4px solid #f66;
+  border-left-width: 4px;
+  border-left-style: solid;
   background-color: #f8f8f8;
   position: relative;
   border-bottom-right-radius: 2px;
   border-top-right-radius: 2px;
 }
-.content p.tip:before {
+.content p.tip:before,
+.content p.success:before {
   position: absolute;
   top: 14px;
   left: -12px;
-  background-color: #f66;
   color: #fff;
-  content: "!";
   width: 20px;
   height: 20px;
   border-radius: 100%;
@@ -987,11 +1086,28 @@ ul.demo li {
   font-family: 'Dosis', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-size: 14px;
 }
-.content p.tip code {
+.content p.tip code,
+.content p.success code {
   background-color: #efefef;
 }
-.content p.tip em {
+.content p.tip em,
+.content p.success em {
   color: #34495e;
+}
+.content p.tip {
+  border-left-color: #f66;
+}
+.content p.tip:before {
+  content: '!';
+  background-color: #f66;
+}
+.content p.success {
+  border-left-color: #42b983;
+}
+.content p.success:before {
+  content: '\f00c';
+  font-family: FontAwesome;
+  background-color: #42b983;
 }
 .guide-links {
   margin-top: 2em;
