--- a/css/page.css
+++ b/css/page.css
@@ -929,7 +929,12 @@ i.rotating-clockwise {
   padding: 2.2em 0;
   max-width: 600px;
   margin: 0 auto;
-  padding-left: 20px;
+  padding-left: 30px;
+}
+@media (max-width: 900px) {
+  .content {
+    padding-left: 0;
+  }
 }
 .content.api > a:first-of-type > h2 {
   margin-top: 0;
