--- a/css/index.css
+++ b/css/index.css
@@ -232,11 +232,11 @@ a.button.white {
 }
 .highlight {
   overflow-x: auto;
-  padding: 0;
   background-color: #f8f8f8;
-  padding: 0.8em 0.8em 0.4em;
+  padding: 0.4em 0 0;
   line-height: 1.1em;
   border-radius: 2px;
+  position: relative;
 }
 .highlight table,
 .highlight tr,
@@ -262,7 +262,7 @@ a.button.white {
 .highlight.bash .code:before,
 .highlight.css .code:before {
   position: absolute;
-  margin-top: -1em;
+  top: 0;
   right: 0;
   color: #ccc;
   text-align: right;
@@ -293,13 +293,14 @@ a.button.white {
 #nav .nav-link {
   cursor: pointer;
 }
-#nav .nav-dropdown-container .nav-link:hover {
+#nav .nav-dropdown-container .nav-link:hover:not(.current) {
   border-bottom: none;
 }
 #nav .nav-dropdown-container:hover .nav-dropdown {
   display: block;
 }
-#nav .nav-dropdown-container.language {
+#nav .nav-dropdown-container.language,
+#nav .nav-dropdown-container.ecosystem {
   margin-left: 20px;
 }
 #nav .nav-dropdown-container .arrow {
@@ -363,6 +364,12 @@ a.button.white {
   border-right: 4px solid transparent;
   border-top: 5px solid #ccc;
 }
+sup.beta.beta {
+  font-size: 0.6em;
+  margin-left: 0.7em;
+  text-transform: uppercase;
+  opacity: 0.6;
+}
 #header {
   background-color: #fff;
   height: 40px;
@@ -396,6 +403,22 @@ body.docs #nav {
   position: relative;
   margin: 0 0.6em;
 }
+#nav .nav-dropdown .nav-link:hover,
+#nav .nav-dropdown .nav-link.current {
+  border-bottom: none;
+}
+#nav .nav-dropdown .nav-link.current::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 5px solid #42b983;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  position: absolute;
+  top: 50%;
+  margin-top: -4px;
+  left: 8px;
+}
 .nav-link {
   padding-bottom: 3px;
 }
@@ -403,7 +426,7 @@ body.docs #nav {
 .nav-link.current {
   border-bottom: 3px solid #42b983;
 }
-.nav-link.shop {
+.nav-link.team {
   margin-left: 10px;
 }
 .new-label {
@@ -559,15 +582,18 @@ body.docs #nav {
 }
 .sidebar .main-sponsor .logo {
   color: #7f8c8d;
-  margin: 10px 0;
-  padding: 10px 0;
+  margin-top: 20px;
   text-align: center;
   font-weight: bold;
+  display: block;
+}
+.sidebar .main-sponsor .logo:last-child {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 .sidebar .main-sponsor img,
 .sidebar .main-sponsor a {
   width: 125px;
-  display: inline-block;
 }
 .sidebar .become-backer {
   border: 1px solid #42b983;
@@ -672,9 +698,6 @@ body.docs #nav {
   max-width: 100px;
   max-height: 60px;
 }
-#sponsors .open-collective-sponsors img {
-  border-radius: 50%;
-}
 #sponsors .open-collective-sponsors h4 {
   color: #999;
   margin-bottom: 0;
@@ -698,7 +721,6 @@ body.docs #nav {
   margin: 10px 20px;
 }
 .content .open-collective-sponsors img {
-  border-radius: 50%;
   max-height: 80px;
   margin-right: 20px;
 }
@@ -722,7 +744,7 @@ body {
   display: none;
 }
 #hero {
-  padding: 50px 40px;
+  padding: 50px 40px 30px;
   background-color: #fff;
 }
 #hero .inner {
@@ -777,6 +799,25 @@ body {
   display: inline-block;
   vertical-align: middle;
   margin-right: 15px;
+}
+#special-sponsor {
+  background-color: #fff;
+  text-align: center;
+  padding-bottom: 30px;
+}
+#special-sponsor a {
+  color: #7f8c8d;
+}
+#special-sponsor span,
+#special-sponsor img {
+  display: inline-block;
+  vertical-align: middle;
+}
+#special-sponsor img {
+  width: 150px;
+  position: relative;
+  top: -3px;
+  margin: 15px;
 }
 #highlights {
   background-color: #fff;
@@ -849,6 +890,12 @@ body {
   }
   #hero .button {
     font-size: 0.9em;
+  }
+  #special-sponsor span {
+    display: block;
+  }
+  #special-sponsor img {
+    width: 125px;
   }
   #highlights .point {
     display: block;
