--- a/css/page.css
+++ b/css/page.css
@@ -370,6 +370,11 @@ sup.beta.beta {
   text-transform: uppercase;
   opacity: 0.6;
 }
+.content.api h2 > sup,
+.content.api h3 > sup {
+  margin-left: 0.3em;
+  color: #b9465c;
+}
 .rotating-clockwise {
   animation: 3s rotating-clockwise linear infinite;
 }
@@ -822,15 +827,18 @@ ul.demo li {
 }
 .sidebar .main-sponsor .logo {
   color: #7f8c8d;
-  margin: 10px 0;
-  padding: 10px 0;
+  margin-top: 20px;
   text-align: center;
   font-weight: bold;
+  display: block;
+}
+.sidebar .main-sponsor .logo:last-child {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 .sidebar .main-sponsor img,
 .sidebar .main-sponsor a {
   width: 125px;
-  display: inline-block;
 }
 .sidebar .become-backer {
   border: 1px solid #42b983;
@@ -1041,7 +1049,8 @@ ul.demo li {
   vertical-align: middle;
   margin-right: 4px;
 }
-#team-members .vuer .profile .social a.github {
+#team-members .vuer .profile .social a.github,
+#team-members .vuer .profile .social a.codepen {
   color: #000;
 }
 #team-members .vuer .profile .social a.twitter {
@@ -1095,7 +1104,14 @@ ul.demo li {
   background-color: #eee;
 }
 .style-guide details {
+  display: block;
   position: relative;
+}
+.style-guide details:not([open]) summary::after {
+  content: "...";
+}
+.style-guide details:not([open]) summary:hover {
+  background: rgba(255,255,255,0.3);
 }
 .style-guide summary {
   cursor: pointer;
@@ -1204,6 +1220,15 @@ ul.demo li {
 .content h1 {
   margin: 0 0 1em;
 }
+.content h2,
+.content h3 {
+  pointer-events: none;
+}
+.content h2 a,
+.content h3 a {
+  pointer-events: auto;
+  color: #2c3e50;
+}
 .content h2:before,
 .content h3:before {
   content: "";
@@ -1216,12 +1241,10 @@ ul.demo li {
   margin: 45px 0 0.8em;
   padding-bottom: 0.7em;
   border-bottom: 1px solid #ddd;
-  z-index: -1;
 }
 .content h3 {
   margin: 52px 0 1.2em;
   position: relative;
-  z-index: -1;
 }
 .content h3:after {
   content: "#";
