--- a/css/index.css
+++ b/css/index.css
@@ -744,7 +744,7 @@ body {
   display: none;
 }
 #hero {
-  padding: 50px 40px 30px;
+  padding: 40px 40px 30px;
   background-color: #fff;
 }
 #hero .inner {
@@ -846,9 +846,16 @@ body {
   color: #7f8c8d;
 }
 #footer {
-  padding: 50px 0;
+  padding: 40px 0;
   color: #fff;
   text-align: center;
+}
+#footer .social-icon {
+  margin: 0 5px;
+}
+#footer .social-icon svg {
+  width: 18px;
+  height: 18px;
 }
 #footer a {
   font-weight: 700;
@@ -869,7 +876,7 @@ body {
     display: block;
   }
   #hero {
-    padding: 50px 40px 30px;
+    padding: 40px 40px 30px;
   }
   #hero .hero-logo {
     float: none;
