--- a/css/page.css
+++ b/css/page.css
@@ -163,6 +163,11 @@ pre .xml .cdata {
 .bsa-cpc .default-ad {
   display: none;
 }
+@media print {
+  #ad {
+    display: none;
+  }
+}
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
   font-size: 15px;
@@ -434,7 +439,7 @@ i.rotating-clockwise {
   height: 40px;
   padding: 10px 60px;
   position: relative;
-  z-index: 2;
+  z-index: 100;
 }
 body.docs #header {
   position: fixed;
@@ -565,6 +570,11 @@ body.docs #nav {
   margin-left: -15px;
   background-size: 30px;
 }
+@media print {
+  #header {
+    display: none;
+  }
+}
 #demo,
 .demo,
 .content .demo {
@@ -666,70 +676,6 @@ ul.demo li {
 .benchmark-table td {
   padding: 3px 7px;
 }
-#sponsors {
-  text-align: center;
-  padding: 35px 40px 45px;
-  background-color: #f6f6f6;
-}
-#sponsors .inner {
-  max-width: 700px;
-  margin: 0px auto;
-}
-#sponsors h3 {
-  color: #999;
-  margin: 0 0 10px;
-}
-#sponsors a {
-  margin: 20px 15px 0;
-  position: relative;
-}
-#sponsors a,
-#sponsors img {
-  width: 100px;
-  display: inline-block;
-  vertical-align: middle;
-}
-#sponsors img {
-  transition: all 0.3s ease;
-  filter: grayscale(100%);
-  opacity: 0.66;
-}
-#sponsors img:hover {
-  filter: none;
-  opacity: 1;
-}
-#sponsors a.vip {
-  display: block;
-  margin: 30px auto 15px;
-  width: 200px;
-}
-#sponsors a.vip img {
-  width: 200px;
-}
-#sponsors .become-sponsor {
-  margin-top: 40px;
-  font-size: 0.9em;
-  font-weight: 700;
-  width: auto;
-  background-color: transparent;
-}
-#sponsors .open-collective-sponsors {
-  margin-top: 60px;
-}
-#sponsors .open-collective-sponsors a,
-#sponsors .open-collective-sponsors img {
-  width: auto;
-  max-width: 100px;
-  max-height: 60px;
-}
-#sponsors .open-collective-sponsors h4 {
-  color: #999;
-  margin-bottom: 0;
-}
-#sponsors.active img {
-  filter: none;
-  opacity: 1;
-}
 .content .platinum {
   text-align: center;
 }
@@ -739,6 +685,7 @@ ul.demo li {
 }
 .content .platinum img {
   width: 250px;
+  vertical-align: middle;
 }
 .content .sponsor-section {
   text-align: center;
@@ -782,6 +729,46 @@ ul.demo li {
 #coin-details p {
   padding: 0;
   margin: 0 0 20px;
+}
+.main-sponsor {
+  color: #7f8c8d;
+  font-size: 0.85em;
+}
+.main-sponsor .logo {
+  color: #7f8c8d;
+  margin-top: 6px;
+  text-align: center;
+  font-weight: bold;
+  display: block;
+}
+.main-sponsor .logo:first-child {
+  margin-top: 12px;
+}
+.main-sponsor .logo:last-child {
+  margin-bottom: 12px;
+}
+.main-sponsor img,
+.main-sponsor a {
+  width: 125px;
+}
+.become-backer {
+  border: 1px solid #42b983;
+  border-radius: 2em;
+  display: inline-block;
+  color: #42b983;
+  font-size: 0.8em;
+  width: 125px;
+  padding: 4px 0;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1300px) {
+  #sidebar-sponsors {
+    position: fixed;
+    z-index: 99;
+    top: 90px;
+    right: 20px;
+  }
 }
 .content.guide[class*="migration"] h2 > sup,
 .content.guide[class*="migration"] h3 > sup {
@@ -872,38 +859,6 @@ ul.demo li {
   display: none;
   padding-left: 0;
 }
-.sidebar .main-sponsor {
-  color: #7f8c8d;
-  font-size: 0.85em;
-}
-.sidebar .main-sponsor .logo {
-  color: #7f8c8d;
-  margin-top: 6px;
-  text-align: center;
-  font-weight: bold;
-  display: block;
-}
-.sidebar .main-sponsor .logo:first-child {
-  margin-top: 12px;
-}
-.sidebar .main-sponsor .logo:last-child {
-  margin-bottom: 12px;
-}
-.sidebar .main-sponsor img,
-.sidebar .main-sponsor a {
-  width: 125px;
-}
-.sidebar .become-backer {
-  border: 1px solid #42b983;
-  border-radius: 2em;
-  display: inline-block;
-  color: #42b983;
-  font-size: 0.8em;
-  width: 125px;
-  padding: 4px 0;
-  text-align: center;
-  margin-bottom: 20px;
-}
 .sidebar .nav-dropdown h4 {
   font-weight: normal;
   margin: 0;
@@ -938,6 +893,11 @@ ul.demo li {
   .sidebar.open {
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
+  }
+}
+@media print {
+  .sidebar {
+    display: none;
   }
 }
 .content.menu {
@@ -1549,6 +1509,11 @@ ul.demo li {
   }
   iframe {
     margin: 0 !important;
+  }
+}
+@media print {
+  .footer {
+    display: none;
   }
 }
 .gitter-open-chat-button {
