--- a/css/page.css
+++ b/css/page.css
@@ -390,6 +390,42 @@ sup.beta.beta {
   text-transform: uppercase;
   opacity: 0.6;
 }
+@media print {
+  body {
+    color: #000;
+  }
+  .highlight {
+    padding: 0;
+    page-break-inside: avoid;
+  }
+  .highlight .code pre {
+    color: #000;
+    background-color: #fff;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: #e8e8e8;
+    page-break-inside: avoid;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    color: #000;
+    page-break-after: avoid;
+    page-break-before: avoid;
+  }
+  img {
+    page-break-inside: avoid;
+  }
+  h2+p {
+    page-break-before: avoid;
+  }
+  a:link:after,
+  a:visited:after {
+    content: " [" attr(href) "] ";
+  }
+}
 .content.api h2 > sup,
 .content.api h3 > sup {
   margin-left: 0.3em;
@@ -675,6 +711,16 @@ ul.demo li {
 .benchmark-table th,
 .benchmark-table td {
   padding: 3px 7px;
+}
+@media print {
+  #demo,
+  .demo,
+  .content .demo {
+    page-break-inside: avoid;
+    padding: 1em;
+    margin-bottom: 1em;
+    border-width: 2px;
+  }
 }
 .content .platinum {
   text-align: center;
@@ -1514,6 +1560,17 @@ ul.demo li {
 @media print {
   .footer {
     display: none;
+  }
+  .content {
+    padding-left: 0px;
+  }
+  .content p {
+    line-height: 1.35em;
+  }
+  .content p.tip {
+    background-color: #fff;
+    border: 2px solid #e8e8e8;
+    border-left: 4px solid #f66;
   }
 }
 .gitter-open-chat-button {
