--- a/css/page.css
+++ b/css/page.css
@@ -782,7 +782,7 @@ ul.demo li {
 }
 .main-sponsor .logo {
   color: #7f8c8d;
-  margin-top: 6px;
+  margin-top: 10px;
   text-align: center;
   font-weight: bold;
   display: block;
@@ -791,7 +791,7 @@ ul.demo li {
   margin-top: 12px;
 }
 .main-sponsor .logo:last-child {
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 .main-sponsor img,
 .main-sponsor a {
@@ -808,8 +808,11 @@ ul.demo li {
   text-align: center;
   margin-bottom: 20px;
 }
+#sidebar-sponsors-special {
+  margin-top: -10px;
+}
 @media screen and (min-width: 1300px) {
-  #sidebar-sponsors {
+  #sidebar-sponsors-platinum {
     position: fixed;
     z-index: 99;
     top: 90px;
@@ -1340,15 +1343,18 @@ ul.demo li {
 }
 .content h3 {
   margin: 52px 0 1.2em;
+  line-height: 1.2;
   position: relative;
 }
-.content h3:after {
+.content h3 > a:before {
   content: "#";
   color: #42b983;
   position: absolute;
   left: -0.7em;
-  bottom: -2px;
+  margin-top: -0.05em;
+  padding-right: 0.5em;
   font-size: 1.2em;
+  line-height: 1;
   font-weight: bold;
 }
 .content figure {
