--- a/css/page.css
+++ b/css/page.css
@@ -633,6 +633,29 @@ body.docs #nav {
   margin: 0 0 0.5em;
   font-size: 1.8em;
 }
+#demo h2,
+.demo h2,
+.content .demo h2 {
+  padding: 0;
+  border: none;
+}
+#demo h2,
+.demo h2,
+.content .demo h2,
+#demo h3,
+.demo h3,
+.content .demo h3,
+#demo h4,
+.demo h4,
+.content .demo h4,
+#demo h5,
+.demo h5,
+.content .demo h5,
+#demo h6,
+.demo h6,
+.content .demo h6 {
+  margin: 1em 0;
+}
 #demo ul,
 .demo ul,
 .content .demo ul,
@@ -675,21 +698,21 @@ body.docs #nav {
   margin: 0 !important;
   padding: 0 !important;
 }
-#demo p:first-child,
-.demo p:first-child,
-.content .demo p:first-child {
-  margin-top: 0;
-}
-#demo p:last-child,
-.demo p:last-child,
-.content .demo p:last-child {
-  margin-bottom: 0;
-}
 #demo textarea,
 .demo textarea,
 .content .demo textarea {
   width: 100%;
   resize: vertical;
+}
+#demo > :first-child,
+.demo > :first-child,
+.content .demo > :first-child {
+  margin-top: 0;
+}
+#demo > :last-child,
+.demo > :last-child,
+.content .demo > :last-child {
+  margin-bottom: 0;
 }
 ul#demo li,
 ul.demo li {
@@ -818,6 +841,41 @@ ul.demo li {
     top: 90px;
     right: 20px;
   }
+}
+#search-page .search-form .search-query {
+  width: 100%;
+  border-radius: 5px;
+  margin-right: 0;
+}
+#search-page .search-form .search-footer {
+  display: flex;
+  height: 35px;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+#search-page .search-form .search-footer p {
+  margin: 0;
+  padding: 0;
+}
+#search-page .search-result {
+  margin-bottom: 15px;
+}
+#search-page .search-result .title {
+  display: block;
+  font-size: 17.55px;
+}
+#search-page .search-result .summary {
+  padding: 0;
+  margin: 0;
+}
+#search-page .search-result .breadcrumb {
+  color: #7f8c8d;
+}
+#search-page .search-result .breadcrumb + .breadcrumb::before {
+  content: "\203A\A0";
+  margin-left: 5px;
+  color: #7f8c8d;
 }
 .content.guide[class*="migration"] h2 > sup,
 .content.guide[class*="migration"] h3 > sup {
