--- a/css/index.css
+++ b/css/index.css
@@ -170,7 +170,7 @@ pre .xml .cdata {
 }
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #34495e;
@@ -966,7 +966,7 @@ body {
     padding: 0 40px 30px;
   }
   #highlights .point:before {
-    content: "—";
+    content: "â€”";
     color: #42b983;
   }
 }
