--- a/css/page.css
+++ b/css/page.css
@@ -170,7 +170,7 @@ pre .xml .cdata {
 }
 body {
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #34495e;
@@ -771,8 +771,10 @@ ul.demo li {
   margin: 10px 20px;
 }
 .content .open-collective-sponsors img {
-  max-height: 80px;
-  margin-right: 20px;
+  max-width: 140px;
+  max-height: 60px;
+  margin-right: 30px;
+  margin-bottom: 20px;
 }
 #one-time-donations a,
 #one-time-donations svg {
@@ -834,12 +836,22 @@ ul.demo li {
 #sidebar-sponsors-special {
   margin-top: -10px;
 }
+#sidebar-sponsors-platinum-left {
+  display: block;
+}
+#sidebar-sponsors-platinum-right {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  top: 90px;
+  right: 20px;
+}
 @media screen and (min-width: 1300px) {
-  #sidebar-sponsors-platinum {
-    position: fixed;
-    z-index: 99;
-    top: 90px;
-    right: 20px;
+  #sidebar-sponsors-platinum-left {
+    display: none;
+  }
+  #sidebar-sponsors-platinum-right {
+    display: block;
   }
 }
 #search-page .search-form .search-query {
@@ -1157,7 +1169,7 @@ ul.demo li {
 }
 #team-members .vuer .profile li::after {
   display: inline-block;
-  content: "·";
+  content: "Â·";
   margin: 0 8px;
 }
 #team-members .vuer .profile li:last-child::after {
@@ -1324,6 +1336,41 @@ ul.demo li {
   .modal {
     width: 98%;
   }
+}
+.scrimba {
+  background-color: #e7ecf3;
+  padding: 1em 1.25em;
+  border-radius: 2px;
+  color: #486491;
+  position: relative;
+}
+.scrimba a {
+  color: #486491 !important;
+  position: relative;
+  padding-left: 36px;
+}
+.scrimba a:before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 30px;
+  top: -5px;
+  left: -4px;
+  border-radius: 50%;
+  background-color: #73abfe;
+}
+.scrimba a:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  top: 5px;
+  left: 8px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 8px solid #fff;
 }
 #header {
   box-shadow: 0 0 1px rgba(0,0,0,0.25);
